[gd_scene load_steps=3 format=3 uid="uid://c317iy2ch3aa7"]

[ext_resource type="PackedScene" uid="uid://bct7xb5u82g5c" path="res://creature/follower.tscn" id="1_ntrxh"]
[ext_resource type="Script" path="res://creature/warrior.gd" id="2_hs0r4"]

[node name="Warrior" instance=ExtResource("1_ntrxh")]
script = ExtResource("2_hs0r4")

[node name="AttackTimer" type="Timer" parent="." index="5"]
wait_time = 0.5
one_shot = true

[node name="AttackCooldown" type="Timer" parent="." index="8"]
wait_time = 0.4
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
